# tensorplus

./: .dockerignore  .gitignore  LICENSE.md  MANIFEST.in  README.md  build-local.sh  build.sh  configure.sh  dbuild.sh  default.nix  dockerfile  drun.sh  flake.nix  flake.nix.bak  flake.nix.test  makefile  nbuild.sh  nixbuild.sh  pyproject.toml  shell.nix  test.nix  test.sh  test.txt
.github/workflows/: develop.yml  nixbld.yml
docs/source/: conf.py  index.rst
lib/: defines.h  includes.h  multidim.cu  tensor.cu  tensor.cuh  tensor.h  tensor_double.cu  tensor_int.cu  tensor_multi.cu  tensor_short.cu  tensorplus.c  vectors.cu
nix/: default.nix  dockerfile  flake.nix  ndbuild.sh  test.nix
nix/latest/: build2.sh  shell.nix
src/: defines.h  includes.h  multidim.cu  tensor.cu  tensor.h  tensorplus.c  workaround.h
src/tensorplus/: __init__.py  tensorplus.dylib  tensorplus.py
test/: test_tensorplus.py
