[tool.poetry]
name = "tensorplus"
version = "0.0.2"
description = "A streamlined tensor library"
authors = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/octakitten/tensorplus"

[tool.poetry.dependencies]
python = ">=3.12"

[tool.poetry.dev-dependencies]
pytest = ">=7.4.3"
sphinx = ">7.3.0"
sphinx-autoapi = ">=3.1.0"
sphinx-rtd-theme = ">=0.1.0"
