[project]
name = "tensorplus"
version = "0.0.2"
authors = [
    { name = "octakitten", email = "raspberry2425@gmail.com" }
    ]
description = "A streamlined tensor library."
readme = "README.md"
license-files = [
    "LICENSE.md",
    ]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest",
    "coverage",
    "pytest-cov",
    ]

docs = [
    "sphinx",
    "sphinx-autoapi",
    "sphinx-rtd-theme",
    ]

[tool.uv]
package = true

[tool.uv.pip]
extra = ["dev", "docs"]

[tool.setuptools]
ext-modules = [
    {name = "tensorplus", sources = ["lib/tensorplus.c"]}
    ]
